# SudoMonitor

./: CMakeLists.txt  README.md  build.sh  test.sh  test1.sh
cpp/: common.h  monitor_subprocesses.cpp  monitor_subprocesses.h  protocol.h  simulator.cpp  sudo_monitor_daemon.cpp  sudo_pam_module.cpp  sudo_plugin.cpp  uds_socket.cpp  uds_socket.h
go/: go.mod  ui_monitor.go
